turtleart.stairs.Stairs.scala.error
Erreur de compilation :
Stairs:2: error: illegal start of simple pattern
  for(<-0 to 5){avance(35)
      ^Stairs:6: error: '<-' expected but '}' found.
} 
^